Fix overlaping bets between player 3 and 4

--- a/root/static/css/jpoker_table.css
+++ b/root/static/css/jpoker_table.css
@@ -609,3 +609,14 @@
     width: auto;
 }
 
+.jpoker_bet {
+  z-index: 101;
+}
+
+.jpoker_player_hole {
+  z-index: 100;
+}
+
+.jpoker_ptable_player_seat3_bet {
+  z-index: 102;
+}
